fixed cta on mobile done

--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -174,7 +174,10 @@
 
   .fixed-cta-mobile {
     position: fixed;
-    bottom: 15%;
+    bottom: 5%;
+    right: 0;
+    left: 0;
+    width: 85vw;
     align-self: center;
     box-shadow: 0px 0px 35px rgba(30, 30, 30, 0.46);
     z-index: 10;
